--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,14 @@
         android:theme="@style/Theme.TechnicalTestContacts"
         tools:targetApi="31">
         <activity
+            android:name=".ui.view.ViewDownloadedContacts"
+            android:screenOrientation="portrait"
+            android:exported="false"
+            android:label="@string/title_activity_view_downloaded_contacts"
+            android:theme="@style/Theme.TechnicalTestContacts" />
+        <activity
             android:name=".ui.view.SavedContacts"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:label="@string/title_activity_saved_contacts"
             android:theme="@style/Theme.TechnicalTestContacts" />
@@ -29,6 +36,7 @@
         <activity
             android:name=".ui.view.MainActivity"
             android:exported="true"
+            android:noHistory="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.TechnicalTestContacts">
