--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,22 @@
         android:theme="@style/Theme.TechnicalTestContacts"
         tools:targetApi="31">
         <activity
-            android:name=".ui.view.ViewDownloadedContacts"
+            android:name=".ui.view.ContactDetail"
+            android:exported="false"
+            android:label="@string/title_activity_contact_detail"
             android:screenOrientation="portrait"
+            android:theme="@style/Theme.TechnicalTestContacts" />
+        <activity
+            android:name=".ui.view.ViewDownloadedContacts"
             android:exported="false"
             android:label="@string/title_activity_view_downloaded_contacts"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TechnicalTestContacts" />
         <activity
             android:name=".ui.view.SavedContacts"
-            android:screenOrientation="portrait"
             android:exported="false"
             android:label="@string/title_activity_saved_contacts"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TechnicalTestContacts" />
         <activity
             android:name=".ui.view.Landing"
@@ -36,8 +42,8 @@
         <activity
             android:name=".ui.view.MainActivity"
             android:exported="true"
-            android:noHistory="true"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.TechnicalTestContacts">
             <intent-filter>
